fix contrast issues with icons and text in left nav
Fixes: CNVS-28194

note: the way we were compiling the css it wasn't pulling in
the if high contrast variables because they were being
explicitly set in our brandables style sheet

test plan:
- as a user with high contrast turned on... navigate to the
  dashboard | the icons in the lefthand nav should now be
  adjusting to our darker blue for a11y
  example: http://screencast.com/t/hUoKGXvMGPcQ
- as a user with high contrast turned on AND unread items
  in your inbox... navigate to the dashboard | the unread
  count should now have a white rule for a11y
  example: http://screencast.com/t/g4JcFcu9

- as a user with high contrast using old ui AND unread items
  in your inbox... navigate to home | the unread count
  should now have a white rule for a11y
  example: http://screencast.com/t/icD9cMlKLB3O

Reviewed-on: https://gerrit.instructure.com/76299
Tested-by: Jenkins
Product-Review: Chris Hart <chart@instructure.com>
QA-Review: Myller de Araujo <myller@instructure.com>

--- a/app/stylesheets/base/_ic_app_header.scss
+++ b/app/stylesheets/base/_ic_app_header.scss
@@ -178,6 +178,10 @@
     background: $ic-brand-global-nav-menu-item__badge-bgd;
     color: $ic-brand-global-nav-menu-item__badge-text;
     @include primary-nav-badge-border($ic-brand-global-nav-bgd);
+
+    @if $use_high_contrast {
+      box-shadow: 0 0 0 2px $ic-color-light;
+    }
   }
 
   .ic-app-header__logomark-container {
